# parkowa-ankiette

./: .gitignore  AUTH_SETUP_GUIDE.md  CLAUDE.md  CONFIG_EXAMPLES.md  README.md  app.py  game_consts.yaml  github_scheduler.py  pyproject.toml  requirements.txt  test_scheduler.py
.github/workflows/: scheduler.yml
.streamlit/: config.toml
migrations/: 001_social_auth.sql
src/: config.py  constants.py  database.py  game_config.py
src/pages/: draw_teams.py  history.py  list_players.py  payments.py  signup.py  stats.py  teams.py
src/ui/: components.py  graphics.py  styles.py
src/utils/: auth.py  datetime_utils.py  game_utils.py  security.py  signup_utils.py  stats_utils.py  team_utils.py  teams_db.py  validation.py
