[project]
name = "parkowa-ankiette"
version = "0.1.0"
description = "Streamlit app for organizing weekly pickup football games"
requires-python = ">=3.9"
dependencies = [
    # st.login needs the [auth] extra (Authlib) plus httpx for the
    # Authlib/starlette OAuth client on Streamlit's uvicorn server
    "streamlit[auth]>=1.47.0",
    "httpx>=0.27",
    "psycopg2-binary>=2.9.7",
    "python-dotenv>=1.0.0",
    "pytz>=2023.3",
    "PyYAML>=6.0.0",
]

# The GitHub Actions scheduler (github_scheduler.py) runs standalone, without
# Streamlit. Install just this subset in CI: `uv run --only-group scheduler ...`.
[dependency-groups]
scheduler = [
    "psycopg2-binary>=2.9.7",
    "pytz>=2023.3",
    "PyYAML>=6.0.0",
]

[tool.uv]
# This is an application run via `streamlit run app.py`, not an installable
# package - don't try to build/install the project root into the environment.
package = false
